# GuardRAG

./: .gitignore  .mcp.json  Dockerfile  README.md  main.ipynb  pyproject.toml  requirements.txt
backend/: README.md  main.py  requirements.txt
backend/db/: database.py  seed.py
backend/routers/: alerts.py  analytics.py  auth.py  chat.py  documents.py  projects.py  rules.py  sessions.py
backend/services/: analytics.py  auth.py  docs.py  guardrails.py  rag.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatHistoryPanel.tsx  ChatWindow.tsx  CitationsPanel.tsx  DashboardLayout.tsx  DocumentUpload.tsx  EmptyState.tsx  FeedbackRow.tsx  GuardrailCard.tsx  PageHeader.tsx
frontend/src/context/: AuthContext.tsx  DarkModeContext.tsx
frontend/src/pages/: GuestPage.tsx  LoginPage.tsx
frontend/src/pages/dashboard/: AlertsPage.tsx  AnalyticsPage.tsx  ApprovalsPage.tsx  AuditPage.tsx  ChatPage.tsx  CompaniesPage.tsx  DocumentsPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  RulesPage.tsx
video/: package-lock.json  package.json  tsconfig.json
video/src/: GuardRAGPromo.tsx  Root.tsx  constants.ts  schema.ts
video/src/components/: BarChart.tsx  DashboardShell.tsx  GridOverlay.tsx  MouseCursor.tsx  NavSidebar.tsx  Toast.tsx
video/src/scenes/: Scene1Entry.tsx  Scene2Documents.tsx  Scene3InputBlock.tsx  Scene4Redaction.tsx  Scene5Audit.tsx  Scene6Branding.tsx
